removed favicon from title bar

--- a/css/style.css
+++ b/css/style.css
@@ -4631,3 +4631,4 @@ ul.count_down.white li p:nth-child(2) {
     /* margin-left:25px; */
     /* border-radius: 50%; */
 }
+.brand {display: none !important}
