--- a/css/style.css
+++ b/css/style.css
@@ -4356,7 +4356,8 @@ ul.count_down.white li p:nth-child(2) {
     flex-direction:row; */
     /* border:solid 2px black; */
 }
-#feelings-btn{
+#feelings-btn,
+#body-btn{
     height:30px;
     width:30px;
     /* border:2px solid magenta; */
@@ -4370,8 +4371,36 @@ ul.count_down.white li p:nth-child(2) {
     font-family: 'Roboto', sans-serif;
     font-size:16pt;
     color: black;
+    text-align: center;
+    font-weight: bold;
     /* width:200px; */
     /* font-weight: bold; */
+}
+#body-needs{
+    position:absolute;
+    top:33%;
+    left:48.5%;
+    z-index: 1;
+    height:35px;
+    width:35px;
+    /* display:flex;
+    flex-direction:row; */
+    /* border:solid 2px black; */
+}
+
+#body-feels{
+    display:none;
+    position:absolute;
+    top:37%;
+    left:45%;
+    height:30px;
+    width:170px; 
+    z-index: 2;
+    font-family: 'Roboto', sans-serif;
+    font-size:16pt;
+    color: black;
+    text-align: center;
+    font-weight: bold;
 }
 
 #emotion{
@@ -4631,4 +4660,96 @@ ul.count_down.white li p:nth-child(2) {
     /* margin-left:25px; */
     /* border-radius: 50%; */
 }
+
+
+#i-need1{
+    position:absolute;
+    top:10%;
+    left:35%;
+    display: none;
+    /* display:flex; */
+    justify-content:center;
+    align-items:center;
+    background:rgb(135, 206, 235,0.6);
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    text-align:center;
+    z-index:2;
+}
+#i-need2{
+    position:absolute;
+    top:3.75%;
+    left:57%;
+    display: none;
+    /* display:flex; */
+    justify-content:center;
+    align-items:center;
+    background: rgb(255, 255, 0, 0.4);
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    text-align:center;
+    z-index:2;
+}
+#need1,
+#need2{
+    height:80px;
+    width:90px;
+    border-radius: 50%;
+    margin-top:7%;
+    /* border:solid 2px yellow; */
+    /* justify-content: center; */
+}
+
+#need-text1,
+#need-text2{
+    background:transparent;
+    width: 110px;
+    height: 30px;
+    align-items:center;
+    /* border:2px solid magenta; */
+    font-size:16pt;
+    color:black;
+    text-align:center;
+    /* margin-top:-5%; */
+    z-index: 3;
+    font-weight: bold;
+    margin-left:2%;
+    /* margin-left:25px; */
+    /* border-radius: 50%; */
+}
+#need-text2{
+    background:transparent;
+    width: 110px;
+    height: 30px;
+    align-items:center;
+    /* border:2px solid magenta; */
+    font-size:14pt;
+    color:black;
+    text-align:center;
+    /* margin-top:-5%; */
+    z-index: 3;
+    font-weight: bold;
+    margin-left:2%;
+    /* margin-left:25px; */
+    /* border-radius: 50%; */
+}
+#need1-inner{
+    background: rgb(135, 206, 250, 0.8);
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    margin-top:10%;
+    margin-left:10%;
+}
+#need2-inner{
+    background: rgb(255, 255, 0);
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    margin-top:10%;
+    margin-left:10%;
+}
+
 .brand {display: none !important}
