--- a/css/style.css
+++ b/css/style.css
@@ -4429,8 +4429,8 @@ ul.count_down.white li p:nth-child(2) {
 
 #i-feel{
     position:absolute;
-    top:11.15%;
-    left:58.25%;
+    top:10.5%;
+    left:58.5%;
     z-index: 2;
     font-family: 'Roboto Condensed', sans-serif;
     /* text-align: center; */
@@ -4443,7 +4443,7 @@ ul.count_down.white li p:nth-child(2) {
     /* display:none; */
     position:absolute;
     top:30.6%;
-    left:63%;
+    left:62%;
     z-index: 2;
     font-family: 'Roboto Condensed', sans-serif;
     /* text-align: center; */
@@ -4456,7 +4456,7 @@ ul.count_down.white li p:nth-child(2) {
 #i-need-my{
     position:absolute;
     top:48.5%;
-    left:59.25%;
+    left:60.5%;
     height:30px;
     width:110px; 
     z-index: 2;
@@ -4490,22 +4490,6 @@ ul.count_down.white li p:nth-child(2) {
     transition: all .15s ease-in-out;
     box-shadow: 0 0 10px 0 #00d7c3 inset, 0 0 20px 2px #00d7c3;
 }
-
-/* 
-#my-needs{
-    position:absolute;
-    top:48%;
-    left:56%;
-    z-index: 1;
-    height:35px;
-    width:35px; */
-    /* display:flex;
-    flex-direction:row; */
-    /* border:solid 2px black; */
-/* } */
-
-
-
 
 
 #emotion{
@@ -4800,7 +4784,7 @@ ul.count_down.white li p:nth-child(2) {
 #i-need3{
     position:absolute;
     top:36.75%;
-    left:58%;
+    left:59.5%;
     display: none;
     /* display:flex; */
     justify-content:center;
@@ -4862,7 +4846,7 @@ ul.count_down.white li p:nth-child(2) {
 #hurts{
     position:absolute;
     top:55%;
-    left:56%;
+    left:59.5%;
     display: none;
     /* display:flex; */
     justify-content:center;
@@ -5473,19 +5457,215 @@ input[type=checkbox] {
     transform: translateX(100%);
   }
 
-  /* .button {
-    width: 35px;
-    height: 35px;
+  #tool1{
+    position:absolute;
+    top:53.5%;
+    left:55.5%;
+    display: none;
+    /* display:flex; */
+    justify-content:center;
+    align-items:center;
+    background:rgb(0, 255, 255, 0.4);
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    text-align:center;
+    z-index:2;
+    border:solid 2px rgb(0, 255, 255);
+}
+#tool1-inner{
+    background:rgb(0, 255, 255);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid 2px #99ffff;
+}
+#tool1-pic,
+#tool2-pic,
+#tool3-pic,
+#tool4-pic,
+#tool5-pic{
+    height:60px;
+    width:70px;
+    border-radius: 50%;
+    margin-top:5%;
+}
+#tool1-text,
+#tool2-text,
+#tool3-text,
+#tool4-text,
+#tool5-text{
+    background:transparent;
+    width: 108px;
+    height: 30px;
+    align-items:center;
+    /* border:2px solid magenta; */
+    font-size:9.75pt;
+    color:black;
+    text-align:center;
+    margin-top:-5%;
+    z-index: 3;
+    font-weight: bold;
+    margin-left:-15px;
+    /* margin-left:25px; */
+    /* border-radius: 50%; */
+}
 
-    text-align: center;
-    color: #000;
-    text-transform: uppercase;
-    font-weight: 600;
-    margin-top:10px;
-    margin-left: 30px;
-    margin-bottom: 30px;
-    cursor: pointer;
-    display: inline-block;
-  } */
+#tool2{
+    position:absolute;
+    top:53.5%;
+    left:62.25%;
+    display: none;
+    /* display:flex; */
+    justify-content:center;
+    align-items:center;
+    background:rgb(255, 127, 80, 0.5);
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    text-align:center;
+    z-index:2;
+    border:solid 2px rgb(255, 127, 80);
+}
+#tool2-inner{
+    background:rgb(255, 127, 80);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid 2px #ffb499;
+}
+
+#tool3{
+    position:absolute;
+    top:53.5%;
+    left:69%;
+    display: none;
+    /* display:flex; */
+    justify-content:center;
+    align-items:center;
+    background:rgb(238, 130, 238, 0.5);
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    text-align:center;
+    z-index:2;
+    border:solid 2px rgb(238, 130, 238);
+}
+#tool3-inner{
+    background:rgb(238, 130, 238);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid 2px #f6bcf6;
+}
+#tool4{
+    position:absolute;
+    top:53.5%;
+    left:75.75%;
+    display: none;
+    /* display:flex; */
+    justify-content:center;
+    align-items:center;
+    background: rgb(0, 153, 153, 0.5);
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    text-align:center;
+    z-index:2;
+    border:solid 2px rgb(0, 153, 153);
+}
+/* #tool4-pic{
+    height:55px;
+    width:65px;
+    border-radius: 50%;
+    margin-top:5%;
+} */
+#tool4-inner{
+    background:rgb(0, 153, 153);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid 2px #00cccc;
+}
+#switch1{
+    height: 0;
+    width: 0;
+    visibility: hidden;
+  }
+#switch2{
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+#switch3{
+    height: 0;
+    width: 0;
+    visibility: hidden;
+  }
   
- 
+  label {
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 70px;
+    height: 35px;
+    background: grey;
+    display: block;
+    border-radius: 100px;
+    position: relative;
+    
+  }
+  
+  label:after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    border-radius: 90px;
+    transition: 0.3s;
+    margin-top:-3px;
+  }
+  
+  input:checked + label {
+    background:#00d7c3;
+
+  }
+  
+  input:checked + label:after {
+    left: calc(100% - 5px);
+    transform: translateX(-100%);
+  }
+  
+  /* label:active:after {
+    width: 130px;
+  } */
+  #holder1{
+    position:absolute;
+    top:7%;
+    left:54%;
+    height:100px;
+    width: 100px;
+    /* border: solid 2px magenta; */
+    z-index:3;
+  }
+  #holder2{
+    position:absolute;
+    top:27.25%;
+    left:57.5%;
+    height:100px;
+    width: 100px;
+    /* border: solid 2px magenta; */
+    z-index:3;
+  }
+  #holder3{
+    position:absolute;
+    top:45%;
+    left:56%;
+    height:100px;
+    width: 100px;
+    /* border: solid 2px magenta; */
+    z-index:3;
+  }
+  
